force-app/main/default/objects/Applicant_Out__e/Applicant_Out__e.object-meta.xml
<CustomObject>
    <label>Applicant - Out</label>
    <pluralLabel>Applicants - Out</pluralLabel>
</CustomObject>