force-app/main/default/objects/Applicant_Out__e/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <label>AccountId</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>