force-app/main/default/objects/Applicant_Out__e/fields/Applicant_RecordType__c.field-meta.xml
<CustomField>
    <fullName>Applicant_RecordType__c</fullName>
    <label>Applicant RecordType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>