force-app/main/default/objects/Applicant_Out__e/fields/Application_DomainId__c.field-meta.xml
<CustomField>
    <fullName>Application_DomainId__c</fullName>
    <label>Application DomainId</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>