force-app/main/default/objects/Applicant_Out__e/fields/DomainId__c.field-meta.xml
<CustomField>
    <fullName>DomainId__c</fullName>
    <label>DomainId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>