force-app/main/default/objects/Applicant_Out__e/fields/Is_Main_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Is_Main_Applicant__c</fullName>
    <label>Is Main Applicant?</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>