force-app/main/default/objects/Applicant_Out__e/fields/IsNew__c.field-meta.xml
<CustomField>
    <fullName>IsNew__c</fullName>
    <label>IsNew</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>